--- a/rtppl/dune
+++ b/rtppl/dune
@@ -1,4 +1,4 @@
 (library
  (name rtppl)
  (public_name rtppl)
- (foreign_stubs (language c) (names smemio smemio-stubs)))
+ (foreign_stubs (language c) (names shared_mem shared_mem_conf smemio-stubs)))
