Rename RTPPL dune library to make it less confusing

--- a/rtppl-support/dune
+++ b/rtppl-support/dune
@@ -1,6 +1,6 @@
 (library
  (name rtppl)
- (public_name rtppl)
+ (public_name rtppl-support)
  (foreign_stubs
   (language c)
   (names shared_mem shared_mem_conf smemio-stubs rt-stubs)))
