Add validation of network specifications

--- a/sketch/Makefile
+++ b/sketch/Makefile
@@ -1,3 +1,8 @@
+all: validate pprint
+
+validate: validate.mc rtppl.mc
+	mi compile $<
+
 pprint: pprint.mc rtppl.mc
 	mi compile $<
 
@@ -5,4 +10,4 @@ rtppl.mc: rtppl.syn lexer.mc
 	mi syn $< $@
 
 clean:
-	rm -f rtppl.mc pprint
+	rm -f rtppl.mc pprint validate
