Update the RTPPL support library

--- a/rtppl-support/dune
+++ b/rtppl-support/dune
@@ -3,4 +3,7 @@
  (public_name rtppl-support)
  (foreign_stubs
   (language c)
-  (names shared_mem shared_mem_conf smemio-stubs rt-stubs)))
+  (names shared_mem shared_mem_conf smemio-stubs rt-stubs))
+ (foreign_stubs
+  (language cxx)
+  (names fifo-stubs)))
